<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NutriFood</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_app">AppActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_profil">Profil</string>
    <string name="action_logout">logout</string>
    <string name="action_add">new meal</string>

    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <!-- User -->
    <string name="editTextUsername">Username</string>
    <string name="editTextPassword">Password</string>
    <string name="editTextEmail">Email</string>
    <string name="editTextFirstname">Firstname</string>
    <string name="editTextLastname">Lastname</string>
    <string name="editTextAge">Age</string>

    <!-- Meal -->
    <string name="editTextMealname">Meal name</string>
    <string name="editTextAuthor">Author</string>
    <string name="editTextDescription">Description</string>
    <string name="editTextInstruction">Instruction</string>
    <string name="editTextDifficulty">Difficulty</string>
    <string name="editTextCookTime">Cook time</string>
    <string name="editTextCategory">Category</string>
    <string name="editTextIngredients">Ingredients</string>


    <string name="connect">Connect</string>
    <string name="register">Register</string>
    <string name="create">Create</string>
    <string name="add">Add</string>

    <!-- Keys -->
    <!-- User -->
    <string name="username_key">username</string>
    <string name="password_key">password</string>
    <string name="email_key">email</string>
    <string name="firstname_key">firstname</string>
    <string name="lastname_key">lastname</string>
    <string name="age_key">age</string>
    <string name="allergy_key">allergy</string>
    <string name="spetial_key">spetialFood</string>

    <!-- MEAL CATEGORY -->
    <string name="id_key">_id</string>
    <string name="name_key">name</string>
    <!-- MEAL -->
    <string name="author_key">author</string>
    <string name="category_key">category</string>
    <string name="description_key">description</string>
    <string name="difficulty_key">difficulty</string>
    <string name="cooktime_key">cooktime</string>
    <string name="ingredients_key">ingredients</string>
    <string name="instruction_key">instruction</string>
    <string name="image_key">image</string>
    <string name="video_key">video</string>
    <string name="nutritionfact_key">nutritionfact</string>

    <string name="token_key">token</string>
    <string name="error_key">message</string>
    <string name="authorization_key">Authorization</string>

    <!-- URL Relative -->
    <string name="Base_URL">http://10.0.2.2:3000/api/v1</string>
    <string name="login_URL">/auth/signin</string>
    <string name="users_URL">/users</string>
    <string name="user_URL">/user</string>
    <string name="meals_URL">/meals</string>
    <string name="image_URL">/meals/image</string>
    <string name="category_URL">/category</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

</resources>