<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/roundborder">

                <EditText
                    android:id="@+id/mealname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_rename_box_grey600_36dp"
                    android:hint="@string/editTextMealname"
                    android:inputType="text"
                    />
                <EditText
                    android:id="@+id/author"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editTextAuthor"
                    android:drawableLeft="@drawable/ic_rename_box_grey600_36dp"
                    android:inputType="textPassword"
                    />

                <EditText
                    android:id="@+id/category"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editTextCategory"
                    android:drawableLeft="@drawable/ic_rename_box_grey600_36dp"
                    android:inputType="text"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/add_ingredient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add"
                        android:layout_alignParentRight="true"
                        android:gravity="center"
                        android:background="@android:drawable/btn_default_small" />
                    <EditText
                        android:id="@+id/ingredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/editTextIngredients"
                        android:drawableLeft="@drawable/ic_rename_box_grey600_36dp"
                        android:inputType="text"
                        android:layout_toLeftOf="@+id/add_ingredient"
                        />
                </RelativeLayout>
                <EditText
                    android:id="@+id/difficulty"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editTextDifficulty"
                    android:drawableLeft="@drawable/ic_rename_box_grey600_36dp"
                    android:inputType="text"
                    />

                <EditText
                    android:id="@+id/cooktime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editTextCookTime"
                    android:drawableLeft="@drawable/ic_rename_box_grey600_36dp"
                    android:inputType="text"
                    />

                <EditText
                    android:id="@+id/instruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editTextInstruction"
                    android:drawableLeft="@drawable/ic_rename_box_grey600_36dp"
                    android:inputType="text"
                    />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editTextDescription"
                    android:drawableLeft="@drawable/ic_rename_box_grey600_36dp"
                    android:inputType="text"
                    />
                <Button
                    android:id="@+id/add_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/image_key"
                    android:gravity="center"
                    android:background="@android:drawable/btn_default_small" />
            </LinearLayout>

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:gravity="center"
                android:background="@android:drawable/btn_default_small" />
            <TextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:textStyle="bold"
                />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
