<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/roundborder">

        <EditText
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTextUsername"
            android:drawableLeft="@drawable/ic_account_grey600_36dp"
            android:inputType="text"
            />
        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTextPassword"
            android:drawableLeft="@drawable/ic_lock_grey600_36dp"
            android:inputType="textPassword"
            />

    </LinearLayout>

        <Button
            android:id="@+id/connect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:gravity="center"
            android:background="@android:drawable/btn_default_small" />
        <TextView
            android:id="@+id/register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF0000"
            android:textStyle="bold"
            />

</LinearLayout>
